spring/product-catalog/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: product-catalog
spec:
  triggers:
    -
      type: ConfigChange
    -
      type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - product-catalog
        from:
          kind: ImageStreamTag
          namespace: product
          name: 'product-catalog:latest'
  replicas: 1
  template:
    metadata:
      labels:
        app: product-catalog      
    spec:
      containers:
      - name: product-catalog
        image: "product/product-catalog:latest"
        imagePullPolicy: Always
        volumeMounts:
        - name: keystore-volume
          mountPath: /var/run/secrets/java.io/keystores

 
          
      volumes:
      - name: keystore-volume
        emptyDir: {}         
      - name: istio-envoy
        emptyDir:
          medium: Memory
          sizeLimit: "0"
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
