spring/product-catalog/src/main/fabric8/deploymentconfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: product-catalog
spec:
  triggers:
    -
      type: ConfigChange
    -
      type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - product-catalog
        from:
          kind: ImageStreamTag
          namespace: product
          name: 'product-catalog:latest'
  replicas: 1
  template:
    metadata:
      labels:
        app: product-catalog      
    spec:
      containers:
      - name: product-catalog
        image: "product/product-catalog:latest"
        imagePullPolicy: Always
        volumeMounts:
        - name: keystore-volume
          mountPath: /var/run/secrets/java.io/keystores

      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - cars-api
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy_debug:0.4.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
          
      volumes:
      - name: keystore-volume
        emptyDir: {}         
      - name: istio-envoy
        emptyDir:
          medium: Memory
          sizeLimit: "0"
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
