spring/product-catalog/src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  annotations:
    auth.istio.io/8080: MUTUAL_TLS
    io.raffa.microsegmentation: 'true'
    io.raffa.microsegmentation.additional-ports: 15000/tcp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: product-catalog
